# fetch_open_auto_dock

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
include/fetch_auto_dock/: auto_dock.h  dock_candidate.h  icp_2d.h  laser_processor.h  linear_pose_filter_2d.h  perception.h
launch/: auto_dock.launch
scripts/: dock_on_button.py  dock_robot.py  odom_rot.py  undock_on_button.py  view_dock.py
src/: auto_dock.cpp  icp_2d.cpp  laser_processor.cpp  linear_pose_filter_2d.cpp  perception.cpp
test/: CMakeLists.txt  printLowPassFilterOutput.m  test_angles1.txt  test_icp.cpp  test_low_pass_filter.cpp  test_out_pidisc_fo1.txt  test_out_pidisc_so1.txt  test_out_pidisc_to1.txt
